--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   hive_flutter: ^1.1.0
   connectivity_plus: ^6.0.3
   fl_chart: ^0.68.0
-
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
